--- a/animation/animation-onscroll/style/style.css
+++ b/animation/animation-onscroll/style/style.css
@@ -22,7 +22,7 @@ html{
 
 body{
 	font-family: 'Lato', sans-serif;
-	background: #022c43; 
+	background: #f3f3f3; 
 	font-size: 3rem;
 
 	/* CENTER */
