--- a/animation/animation-onscroll/style/style.css
+++ b/animation/animation-onscroll/style/style.css
@@ -11,33 +11,34 @@
 	padding:0;
 	margin:0;
 	box-sizing: content-box;
-	list-style: none;      /* remove bullet point from lists */
 	text-decoration:none; /* remove underline from <a> */
 	color: var(--text); 
 }
 
 html{
-	font-size:62.5%  /* 1rem  = 10px */
+	font-size:62.5%;  /* 1rem  = 10px */
 }
 
 body{
-	font-family: 'Lato', sans-serif;
+	font-family: 'Poppins', sans-serif;
 	background: #f3f3f3; 
 	font-size: 3rem;
 
-	/* CENTER */
-	/* display:flex; 
-	height: 100vh;
-	align-items: center;
-	justify-content: center; */
 }
 
 /* TYPOGRAPHY  */
-h1{font-size: 2.5rem;}
-h3{font-size: 3.5rem;}
-h4{font-size: 3rem;}
+h1{font-size: 4.5rem;}
+h3{font-size: 3rem;}
+h4{font-size: 2rem;}
+h5{font-size: 2rem;}
+h6{font-size: 2rem;}
 p{font-size: 2.5;}
 li{font-size: 2rem;}
+
+.light{font-weight: 200;}
+.regular{font-weight: normal;}
+.bold{font-weight: bold;}
+.black{font-weight: bolder;}
 
 
 
