--- a/animation/animation-onscroll/style/index.css
+++ b/animation/animation-onscroll/style/index.css
@@ -120,15 +120,26 @@ section{
 }
 #section-3 .right li{
     height: 50px; width: 50px; 
+    position: relative;
     list-style: none;
     background: grey;
     background: var(--color);
     margin: 1rem; 
     padding: 5px; 
     border-radius: 5px;
-    opacity: 0;
+    opacity: 0; /* set initial state as invisible  */
+}
+#section-3 .right li::after{
+    position: absolute; right:-11px; top: 50%; transform: translateY(-50%);
+    content: ""; 
+    width: 0; 
+  height: 0; 
+  border-top: 11px solid transparent;
+  border-bottom: 11px solid transparent;
+  border-left: 11px solid var(--color);
 }
 #section-3 .right li:last-child{ width: fit-content; line-height: 50px; padding: 5px 2rem;}
+#section-3 .right li:last-child::after{display:none;}
 #section-3 .right img{width:100%}
 
 /* animate when section is intersecting  */
