--- a/animation/animation-onscroll/style/index.css
+++ b/animation/animation-onscroll/style/index.css
@@ -35,7 +35,7 @@ header li{
 
 /* ==========ALL-SECTIONS==========  */
 section{
-    height: 80vh; min-height: fit-content; width:80%;
+    height:fit-content ; min-height: 80vh; width:80%;
     margin: auto;
     display: flex; 
     justify-content: center; 
