--- a/advanced-CSS/panda/style/style.scss
+++ b/advanced-CSS/panda/style/style.scss
@@ -1,8 +1,10 @@
+body{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 .wrapper{
-    margin-top :50px; 
-    height: 700px;
-    width:700px; 
-    border: 1px solid grey; 
     display: flex;
     flex-direction: column;
     align-items: center;
