--- a/animation/animation-onmouse/style/style.css
+++ b/animation/animation-onmouse/style/style.css
@@ -1,7 +1,17 @@
+body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100vh;
+}
+
 .wrapper {
-  height: 700px;
-  width: 700px;
-  border: 1px solid grey;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -22,6 +32,7 @@ h1 {
   font-family: 'Nunito', sans-serif;
   font-size: 5rem;
   margin: 30px;
+  color: #453c39;
 }
 
 .face, .face::before {
@@ -44,27 +55,26 @@ h1 {
 
 .eye {
   position: absolute;
-  top: 190px;
   height: 140px;
   width: 190px;
   background: #453c39;
+  top: 190px;
   border-radius: 90%;
 }
 
 .eye::before, .eye::after {
   content: "";
   position: absolute;
-  left: 35%;
-  bottom: 15px;
   width: 60px;
   height: 60px;
   background: #fbede6;
   border-radius: 50%;
+  left: 35%;
+  bottom: 15px;
 }
 
 .eye::after {
   background: #453c39;
-  border-radius: 50%;
   -webkit-transform: scale(0.6) translateY(10px);
           transform: scale(0.6) translateY(10px);
 }
@@ -87,33 +97,33 @@ h1 {
   width: 190px;
   background: #56524e;
   border-radius: 90%;
+  top: 10px;
   -webkit-box-shadow: 0px 0px 20px 3px rgba(85, 85, 85, 0.1), inset 0px 0px 0px 34px #453c39;
           box-shadow: 0px 0px 20px 3px rgba(85, 85, 85, 0.1), inset 0px 0px 0px 34px #453c39;
   z-index: -1;
-  top: 10px;
 }
 
 .ear.right {
   position: abolute;
+  right: -5px;
   -webkit-transform: rotate(-40deg);
           transform: rotate(-40deg);
-  right: -5px;
 }
 
 .ear.left {
   position: abolute;
+  left: -5px;
   -webkit-transform: rotate(40deg);
           transform: rotate(40deg);
-  left: -5px;
 }
 
 .nose {
   position: absolute;
-  left: calc(50% - (160px/2));
-  bottom: 90px;
   height: 50px;
   width: 160px;
   background: #453c39;
+  bottom: 90px;
+  left: calc(50% - (160px/2));
   border-radius: 70% 70% 80% 80% /  60% 60% 100% 100%;
 }
 
@@ -127,11 +137,11 @@ h1 {
 
 .mouth .p1 {
   position: absolute;
-  right: calc(62.2% - (200px/2));
   height: 85px;
   width: 50px;
+  right: calc(64.7% - (200px/2));
   border: 10px solid #453c39;
-  border-radius: 70% 70% 80% 80% /  60% 60% 100% 100%;
+  border-radius: 70% 70% 80% 80% /   60% 60% 100% 100%;
   -webkit-transform: rotate(70deg);
           transform: rotate(70deg);
   -webkit-clip-path: polygon(60% 0, 100% 0, 100% 100%, 60% 100%);
@@ -140,14 +150,14 @@ h1 {
 
 .mouth .p2 {
   position: absolute;
-  left: calc(62.3% - (200px/2));
   height: 85px;
-  width: 60px;
+  width: 50px;
   border: 10px solid #453c39;
   border-radius: 80% 80% 70% 70%  / 100% 100% 60% 60%;
+  left: calc(64.7% - (200px/2));
   -webkit-transform: rotate(110deg);
           transform: rotate(110deg);
   -webkit-clip-path: polygon(60% 0, 100% 0, 100% 100%, 60% 100%);
           clip-path: polygon(60% 0, 100% 0, 100% 100%, 60% 100%);
 }
-/*# sourceMappingURL=test.css.map */
+/*# sourceMappingURL=style.css.map */
