--- a/advanced-CSS/panda/style/style.css
+++ b/advanced-CSS/panda/style/style.css
@@ -1,8 +1,17 @@
+body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100vh;
+}
+
 .wrapper {
-  margin-top: 50px;
-  height: 700px;
-  width: 700px;
-  border: 1px solid grey;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
