--- a/animation/animation-onmouse/style/style.scss
+++ b/animation/animation-onmouse/style/style.scss
@@ -3,6 +3,21 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
+    cursor: none;
+}
+#bamboo{
+    position: absolute;
+    height: 300px;
+    // transform: rotate(-15deg);
+    z-index: 1;
+    opacity:0; 
+    transition: opacity 1s ease;
+    animation: shake 3s ease infinite alternate;
+}
+@keyframes shake{
+    0%{transform:rotateZ(0deg)  translate(-50%,-50%)}
+    70%{transform:rotateZ(-5deg)  translate(-50%,-50%)}
+    100%{transform:rotateZ(-2deg)  translate(-50%,-50%)}
 }
 .wrapper{
     display: flex;
