--- a/responsive/facebook/style/style.css
+++ b/responsive/facebook/style/style.css
@@ -5,6 +5,7 @@
 	--bg: #EFF2F5; 
 	--primary: #1977F2; 
 	--green: #44B729;  
+	--grey: #dddfe2;
 }
 /* RESETTING */
 *,*::before,*::after{
@@ -20,15 +21,15 @@ html{
 }
 
 body{
-	font-family: 'Lato', sans-serif;
+	font-family:'Lato', sans-serif;
 	background: var(--bg); 
-	font-size: 3rem;
+	font-size: 1.5rem;
 }
 
 /* TYPOGRAPHY  */
-h1{font-size: 2.5rem;}
+h1{font-size: 2.8rem;}
 h3{font-size: 3.5rem;}
-h4{font-size: 3rem;}
+h5{font-size: 1.5rem;}
 p{font-size: 2.5;}
 li{font-size: 2rem;}
 
