--- a/responsive/facebook/style/style.css
+++ b/responsive/facebook/style/style.css
@@ -7,7 +7,7 @@
 	--green: #44B729;  
 	--grey: #dddfe2;
 }
-/* RESETTING */
+/* NORMALIZE */
 *,*::before,*::after{
 	padding:0;
 	margin:0;
@@ -28,10 +28,8 @@ body{
 
 /* TYPOGRAPHY  */
 h1{font-size: 2.8rem;}
-h3{font-size: 3.5rem;}
 h5{font-size: 1.5rem;}
-p{font-size: 2.5;}
-li{font-size: 2rem;}
+
 
 
 
