--- a/responsive/twitter/style/style.css
+++ b/responsive/twitter/style/style.css
@@ -9,9 +9,12 @@
 *,*::before,*::after{
 	padding:0;
 	margin:0;
-	box-sizing: content-box;
+	box-sizing: border-box;
 	text-decoration:none; /* remove underline from <a> */
 	color: var(--text); 
+}
+html, body {
+    height: 100%;
 }
 
 html{
@@ -25,8 +28,12 @@ body{
 }
 
 /* TYPOGRAPHY  */
-h1{font-size: 6rem; font-family: 'Archivo Black', sans-serif;}
-h2{font-size: 3rem;	font-family: 'Archivo Black', sans-serif;}
+h1,h2{
+	overflow-wrap: break-word;
+	font-family: 'Archivo Black', sans-serif;
+}
+h1{font-size: 6rem; }
+h2{font-size: 3rem;	}
 
 
 
