--- a/responsive/instagram/style/index.css
+++ b/responsive/instagram/style/index.css
@@ -1,102 +1,47 @@
-
 .container{
-    margin:15vh 15%;
-    display:flex;
-    justify-content: space-around;
-    
-}
-/* ========== LEFT ========== */
-#left{
-    width:500px;
-    text-align: left;
-    padding-right: 2rem;
-    align-self: center;
-}
-#left img{
-    height: 100px;
-}
-#left h1{
-    font-weight: 400;
-}
-/* ========== RIGHT ========== */
-#right{
-    text-align: center;
-}
-#right h5{
-    text-align: center;
-}
-#right form{
-    background: white; 
-    /* smooth shadow: add a soft shadow then a more intens one:  */
-    box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
-    border-radius: 8px;
-    padding: 2rem;
-    width:350px;
+    width: 900px;
+    height: 70vh;
+    border: 1px solid black; 
+    margin: 5vh auto auto auto; 
     display: flex;
-    flex-direction: column;
-    
 }
 
-input[type='text'],input[type='password']{
+#mockup{
     
-    padding : 14px 16px;
-    background: #fff;
-    margin: .5rem 0; 
-    border-radius: 6px; 
-    border: 1px solid var(--grey); 
+    background: url(../img/bg.png);
+    /* set div dimensions  */
+    flex-basis:454px;
+    height: 618px; 
+    /* assign div dimensions to the bg  */
+    background-size: 454px 618px;
 }
-input[type='text']::placeholder, input[type='password']::placeholder{
-    font-size: 1.5rem; 
-    color: #a0a0a0; 
+
+#form{
+    border: 1px solid #dbdbdb; 
+    background: white;
+    border-radius: 1px;
+    padding: 3rem 4rem;
 }
-input[type='submit']{
-    font-size: 2rem; 
-    font-weight: 600;
-    padding: 1rem 0; 
-    color: white; 
-    background: var(--primary); 
-    border: none; 
-    border-radius: 6px; 
-    margin: .5rem 0;
+
+#form img{
+    width: 175px;
 }
-input[type='submit']:hover,button:hover{
-    cursor: pointer;
-    filter:grayscale(20%);
-}
-form a{
+#form input{
     display: block;
-    color: var(--primary); 
-    padding: 2rem; 
-    border-bottom: 1px solid var(--grey);
-}
-form button{
-    background: var(--green); 
-    color: white; 
-    border: none; 
-    border-radius: 6px;
-    font-size: 2rem; 
-    font-weight: 600;
-    padding: 1rem 2rem;
-    margin: 2rem auto; 
-
-}
-#right h5{
-    font-weight: 400;
-    margin: 2rem auto; 
-}
-#right h5 a{
-    font-weight: 600;
+    width:250px;
 }
 
-@media only screen and (max-width:900px){
-    .container{
-        flex-direction: column;
-        align-items: center;
-    }
-    #left{
-        text-align: center;
-        width:390px;
-        padding-bottom:2rem; 
-
-    }
+/* DIVISION  */
+.hr{
+    display: flex;
+    align-items: center;
+}
+.hr .line{
+    flex:1;
+    border: 1px solid #dbdbdb;
+    height: 0px;
+}
+.hr h4{
+    color:#9c9c9c;
+    padding: 0 1rem;
 }
