--- a/responsive/instagram/style/style.css
+++ b/responsive/instagram/style/style.css
@@ -2,18 +2,16 @@
 
 /* COLORS */
 :root{
-	--bg: #EFF2F5; 
-	--primary: #1977F2; 
-	--green: #44B729;  
-	--grey: #dddfe2;
+	--bg: #fafafa; 
+	--blue: #0096F6; 
+
 }
 /* NORMALIZE */
 *,*::before,*::after{
 	padding:0;
 	margin:0;
-	box-sizing: content-box;
+	box-sizing: border-box;
 	text-decoration:none; /* remove underline from <a> */
-	color: var(--text); 
 }
 
 html{
