--- a/responsive/instagram/style/index.css
+++ b/responsive/instagram/style/index.css
@@ -1,7 +1,6 @@
 .container{
     width: 900px;
     height: 70vh;
-    border: 1px solid black; 
     margin: 5vh auto auto auto; 
     display: flex;
 }
@@ -16,6 +15,16 @@
     height: 618px; 
     /* assign div dimensions to the bg  */
     background-size: 454px 618px;
+    position: relative;
+}
+
+#mockup img{
+    width:240px;
+    height:427px;
+    position: absolute;
+    top:100px; right:63px;
+    opacity: 0;
+    animation: fade-in-out 15s ease var(--delay) infinite forwards;
 }
 
 
@@ -49,7 +58,7 @@
 
 #form input[type='submit']{
     background: var(--blue);
-    padding: .5rem 1rem;
+    padding: .75rem 1rem;
     border-radius: 5px;
     color:white;
     font-weight: bold;
@@ -61,7 +70,7 @@
 /* FACEBOOK  */
 #fb{
     display:flex;
-    margin:auto;
+    margin: 3rem auto 2rem auto;
     width:fit-content;
 }
 #fb img{
@@ -71,8 +80,12 @@
 
 /* FORGOT PASS */
 #login h6{
-    font-weight: lighter;
+    width:fit-content;
+    font-weight: 500;
+    margin: auto;
+    margin-bottom: 2rem;
 }
+#login h6 a {color:black;}
 
 /* DIVISION  */
 .hr{
@@ -85,6 +98,7 @@
     height: 0px;
 }
 .hr h4{
+    font-size: 1.4rem;
     color:#9c9c9c;
     padding: 0 1rem;
 }
@@ -96,5 +110,25 @@
     border-radius: 1px;
     padding: 3rem 4rem;
     margin-top: 1rem;
+
+}
+#signup h5{
+    width: fit-content;
+    margin:auto;
+    font-weight: 400;
+}
+#signup a{
+    color:var(--blue);
+    font-weight: 600;
+}
+
+/* ========== KEYFRAME ==========  */
+
+@keyframes fade-in-out{
+    0%{opacity: 0;}
+    5%{opacity: 1;}
+    50%{opacity: 1;}
+    75%{opacity: 0;}
+    100%{opacity: 0;}
 
 }
