--- a/system-design/sticky-reponsive-nav/style/index.css
+++ b/system-design/sticky-reponsive-nav/style/index.css
@@ -1,2 +1,105 @@
+/* ========== STICKY NAV ==========  */
+#sticky-nav{
+    height: 70px;
+    width: 100%;
+    box-shadow: 0 0.3rem 0.6rem rgb(0 0 0 / 13%);
+    position:relative;
+    z-index: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #fff;
+}
 
+#sticky-nav .left{
+    display: flex;
+    flex-basis: 200px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 30px;
+}
+#sticky-nav .left #menu-checkbox{
+   display: none;
+}
+#sticky-nav .left #hamburger-menu{
+    cursor: pointer;
+    display: block;
+    width:30px;
 
+}
+#sticky-nav .search-bar{
+    display: flex;
+    justify-content: space-between;
+    flex-basis: 35%;
+    height: 35px;
+}
+
+#sticky-nav .search-bar input{
+    padding: 0px 10px; 
+    border: none;
+    background: transparent;
+    border: 1px solid #D9D3D3;
+    flex:1; 
+
+}
+
+#sticky-nav .search-icon{
+    flex-basis: 70px;
+    border: 1px solid #D9D3D3;
+    border-radius: 2px;
+    background-color: #F1F1F1;
+    background-image:  url(../img/search-icon.svg) ;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size:20px 20px; 
+    cursor: pointer; 
+    padding: 7px; 
+}
+#sticky-nav .right{
+    flex-basis: 300px;
+    padding-right:30px;
+}
+#sticky-nav .right ul{
+    display: flex;
+    justify-content: space-between;
+}
+#sticky-nav .right li img{
+    display: block;
+    width:30px;
+}
+aside{
+    width:280px;
+    height: calc(100vh - 70px);
+    background: #fff;
+    box-shadow: 0 0.3rem 0.6rem rgb(0 0 0 / 13%);
+    padding: 20px 15px;
+}
+aside ul{
+    display: flex;
+    flex-direction: column;
+}
+aside li{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border: 1px solid #e9e9e9;
+    margin: 5px 0;
+    padding: 15px 20px;
+    border-radius: 2px;
+}
+aside.collapse{
+    width: fit-content;
+}
+aside li img{
+    width:30px; 
+}
+aside li h4{
+    font-weight: 400;
+    padding-left:10px;
+}
+aside.collapse li h4{
+    display: none;
+}
+#menu-checkbox:checked{
+    display: block;
+}
