--- a/system-design/sticky-reponsive-nav/style/style.css
+++ b/system-design/sticky-reponsive-nav/style/style.css
@@ -1,19 +1,17 @@
 @import "./index.css" ;
+@import "./tablet-vp.css"; 
+@import "./mobile-vp.css"; 
 
 /* COLORS */
 :root{
-    --bg: #F5F5F5; 
-    --box: #dbdbdb; 
-    --text: #505050; 
+
 }
 /* RESETTING */
 *,*::before,*::after{
 	padding:0;
 	margin:0;
-	box-sizing: content-box;
+	box-sizing: border-box;
 	list-style: none;      /* remove bullet point from lists */
-	text-decoration:none; /* remove underline from <a> */
-	color: var(--text); 
 }
 
 html{
@@ -21,22 +19,18 @@ html{
 }
 
 body{
-	font-family: 'Lato', sans-serif;
-	background: var(--bg); 
-	font-size: 3rem;
-
-	/* CENTER */
-	/* display:flex; 
-	height: 100vh;
-	align-items: center;
-	justify-content: center; */
+	font-family: 'Roboto', sans-serif;
+	font-size: 2rem;
+	background: #F6F6F6;
 }
 
 /* TYPOGRAPHY  */
-h1{font-size: 2.5rem;}
-h3{font-size: 3.5rem;}
-h4{font-size: 3rem;}
-p{font-size: 2.5;}
+h1{font-size: 3.6rem;}
+h3{font-size: 2.4rem;}
+h4{font-size: 1.8rem;}
+h5{font-size: 1.4rem;}
+h6{font-size: 1rem;}
+p{font-size: 2rem;}
 li{font-size: 2rem;}
 
 
