--- a/system-design/sticky-reponsive-nav/style/index.css
+++ b/system-design/sticky-reponsive-nav/style/index.css
@@ -70,6 +70,7 @@
     display: block;
     width:30px;
 }
+/* ========== ASIDE ==========  */
 
 .container{
     display: flex;
@@ -112,4 +113,10 @@ aside li h4{
 }
 aside.collapse li h4{
     display: none;
+}
+
+/* ========== MAIN ==========  */
+
+main{
+    flex-grow: 1;
 }
